--- a/408基本咨讯/408考试大纲.md
+++ b/408基本咨讯/408考试大纲.md
@@ -12,4 +12,8 @@ Date : 2019 - 11 - 12
 |150分|180分钟|闭卷<br> <br>笔试|数据结构45分<br> <br>计算机组成原理45分<br> <br>操作系统35分<br> <br>计算机网络25分|单项选择题80分(40小题，每小题2分)<br> <br>综合应用题70分|
 
 
+## 考试大纲
+|数据结构|操作系统|计算机组成原理|计算机网络|
+|:--:|:--:|:--:|:--:|
+|【[Click Here]()】|【[Click Here]()】|【[Click Here]()】|【[Click Here]()】|
 
