--- a/408基本咨讯/数据结构考试大纲.md
+++ b/408基本咨讯/数据结构考试大纲.md
@@ -1,3 +1,14 @@
+```
+Author : Soler HO
+Description : 根据以往内容进行更新，具体考试大纲版本会以最新考纲进行更新。
+Date : 2019 - 11 - 12
+```
+## 数据结构考试目标
+
+ - 1.掌握数据结构的基本概念、基本原理和基本方法。
+ - 2.掌握数据的逻辑结构、存储结构及基本操作的实现，能够对算法进行基本的时间复杂度与空间复杂度的分析。
+ - 3.能够运用数据结构基本原理和方法进行问题的分析与求解，具备采用C或C++语言设计与实现算法的能力。
+
 ## 数据结构考试大纲
 
 ### 一、线性表
